JNG-3769 Logging improved